tests/compile_fail/invalid_outline_literal.rs
use surgeist_style::Outline;

fn main() {
    let _outline = Outline {
        width: None,
        style: None,
        color: None,
    };
}
