tests/compile_fail/invalid_outline_literal.stderr
error[E0451]: fields `width`, `style` and `color` of struct `surgeist_style::Outline` are private
 --> tests/compile_fail/invalid_outline_literal.rs:5:9
  |
4 |     let _outline = Outline {
  |                    ------- in this type
5 |         width: None,
  |         ^^^^^ private field
6 |         style: None,
  |         ^^^^^ private field
7 |         color: None,
  |         ^^^^^ private field
